Updates for squirrels 0.4.1

--- a/mortgage_analysis/Analysis.ipynb
+++ b/mortgage_analysis/Analysis.ipynb
@@ -48,37 +48,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>5712.536</td>\n",
-       "      <td>2322.202</td>\n",
-       "      <td>145.997</td>\n",
+       "      <td>1489.533</td>\n",
+       "      <td>976.749</td>\n",
+       "      <td>52.499</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>2504.887</td>\n",
-       "      <td>1669.883</td>\n",
-       "      <td>50.004</td>\n",
+       "      <td>1193.400</td>\n",
+       "      <td>1381.704</td>\n",
+       "      <td>-13.628</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>3585.608</td>\n",
-       "      <td>2282.818</td>\n",
-       "      <td>57.069</td>\n",
+       "      <td>4690.212</td>\n",
+       "      <td>2225.656</td>\n",
+       "      <td>110.734</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>4839.426</td>\n",
-       "      <td>3175.672</td>\n",
-       "      <td>52.391</td>\n",
+       "      <td>2853.618</td>\n",
+       "      <td>1818.916</td>\n",
+       "      <td>56.886</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>815.521</td>\n",
-       "      <td>1083.742</td>\n",
-       "      <td>-24.750</td>\n",
+       "      <td>3023.094</td>\n",
+       "      <td>2732.078</td>\n",
+       "      <td>10.652</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -90,37 +90,37 @@
        "    <tr>\n",
        "      <th>995</th>\n",
        "      <td>996</td>\n",
-       "      <td>1149.395</td>\n",
-       "      <td>1204.280</td>\n",
-       "      <td>-4.558</td>\n",
+       "      <td>4162.369</td>\n",
+       "      <td>1960.712</td>\n",
+       "      <td>112.289</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>996</th>\n",
        "      <td>997</td>\n",
-       "      <td>1045.965</td>\n",
-       "      <td>993.125</td>\n",
-       "      <td>5.321</td>\n",
+       "      <td>1859.200</td>\n",
+       "      <td>1548.750</td>\n",
+       "      <td>20.045</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
        "      <td>998</td>\n",
-       "      <td>837.214</td>\n",
-       "      <td>715.677</td>\n",
-       "      <td>16.982</td>\n",
+       "      <td>1565.336</td>\n",
+       "      <td>1212.288</td>\n",
+       "      <td>29.122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
        "      <td>999</td>\n",
-       "      <td>1370.791</td>\n",
-       "      <td>1462.641</td>\n",
-       "      <td>-6.280</td>\n",
+       "      <td>4545.602</td>\n",
+       "      <td>3173.039</td>\n",
+       "      <td>43.257</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
        "      <td>1000</td>\n",
-       "      <td>2840.121</td>\n",
-       "      <td>1368.373</td>\n",
-       "      <td>107.555</td>\n",
+       "      <td>2019.371</td>\n",
+       "      <td>2026.182</td>\n",
+       "      <td>-0.336</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -129,17 +129,17 @@
       ],
       "text/plain": [
        "     trial_number  value_if_renew_mortgage  value_if_pay_down_house  perc_diff\n",
-       "0               1                 5712.536                 2322.202    145.997\n",
-       "1               2                 2504.887                 1669.883     50.004\n",
-       "2               3                 3585.608                 2282.818     57.069\n",
-       "3               4                 4839.426                 3175.672     52.391\n",
-       "4               5                  815.521                 1083.742    -24.750\n",
+       "0               1                 1489.533                  976.749     52.499\n",
+       "1               2                 1193.400                 1381.704    -13.628\n",
+       "2               3                 4690.212                 2225.656    110.734\n",
+       "3               4                 2853.618                 1818.916     56.886\n",
+       "4               5                 3023.094                 2732.078     10.652\n",
        "..            ...                      ...                      ...        ...\n",
-       "995           996                 1149.395                 1204.280     -4.558\n",
-       "996           997                 1045.965                  993.125      5.321\n",
-       "997           998                  837.214                  715.677     16.982\n",
-       "998           999                 1370.791                 1462.641     -6.280\n",
-       "999          1000                 2840.121                 1368.373    107.555\n",
+       "995           996                 4162.369                 1960.712    112.289\n",
+       "996           997                 1859.200                 1548.750     20.045\n",
+       "997           998                 1565.336                 1212.288     29.122\n",
+       "998           999                 4545.602                 3173.039     43.257\n",
+       "999          1000                 2019.371                 2026.182     -0.336\n",
        "\n",
        "[1000 rows x 4 columns]"
       ]
@@ -150,7 +150,7 @@
     }
    ],
    "source": [
-    "df = await sqrl.dataset(\"simulations\", user=None)\n",
+    "df = await sqrl.dataset(\"simulations\")\n",
     "df"
    ]
   },
