--- a/sqrl-mortgage-analysis/Analysis.ipynb
+++ b/sqrl-mortgage-analysis/Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>trial_number</th>\n",
+       "      <th>_row_num</th>\n",
        "      <th>value_if_renew_mortgage</th>\n",
        "      <th>value_if_pay_down_house</th>\n",
        "      <th>perc_diff</th>\n",
@@ -48,37 +48,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>1489.533</td>\n",
-       "      <td>976.749</td>\n",
-       "      <td>52.499</td>\n",
+       "      <td>1616074.90</td>\n",
+       "      <td>1149654.06</td>\n",
+       "      <td>40.57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>1193.400</td>\n",
-       "      <td>1381.704</td>\n",
-       "      <td>-13.628</td>\n",
+       "      <td>3314524.48</td>\n",
+       "      <td>1869402.19</td>\n",
+       "      <td>77.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>4690.212</td>\n",
-       "      <td>2225.656</td>\n",
-       "      <td>110.734</td>\n",
+       "      <td>1562852.13</td>\n",
+       "      <td>1287059.51</td>\n",
+       "      <td>21.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>2853.618</td>\n",
-       "      <td>1818.916</td>\n",
-       "      <td>56.886</td>\n",
+       "      <td>1264256.73</td>\n",
+       "      <td>1376323.12</td>\n",
+       "      <td>-8.14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>3023.094</td>\n",
-       "      <td>2732.078</td>\n",
-       "      <td>10.652</td>\n",
+       "      <td>1124101.47</td>\n",
+       "      <td>1165339.87</td>\n",
+       "      <td>-3.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -90,37 +90,37 @@
        "    <tr>\n",
        "      <th>995</th>\n",
        "      <td>996</td>\n",
-       "      <td>4162.369</td>\n",
-       "      <td>1960.712</td>\n",
-       "      <td>112.289</td>\n",
+       "      <td>7435961.95</td>\n",
+       "      <td>3933594.40</td>\n",
+       "      <td>89.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>996</th>\n",
        "      <td>997</td>\n",
-       "      <td>1859.200</td>\n",
-       "      <td>1548.750</td>\n",
-       "      <td>20.045</td>\n",
+       "      <td>3178854.04</td>\n",
+       "      <td>1918185.56</td>\n",
+       "      <td>65.72</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
        "      <td>998</td>\n",
-       "      <td>1565.336</td>\n",
-       "      <td>1212.288</td>\n",
-       "      <td>29.122</td>\n",
+       "      <td>7807766.75</td>\n",
+       "      <td>3979523.78</td>\n",
+       "      <td>96.19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
        "      <td>999</td>\n",
-       "      <td>4545.602</td>\n",
-       "      <td>3173.039</td>\n",
-       "      <td>43.257</td>\n",
+       "      <td>4477822.29</td>\n",
+       "      <td>2633370.76</td>\n",
+       "      <td>70.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
        "      <td>1000</td>\n",
-       "      <td>2019.371</td>\n",
-       "      <td>2026.182</td>\n",
-       "      <td>-0.336</td>\n",
+       "      <td>4157366.54</td>\n",
+       "      <td>3140112.24</td>\n",
+       "      <td>32.39</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -128,29 +128,197 @@
        "</div>"
       ],
       "text/plain": [
-       "     trial_number  value_if_renew_mortgage  value_if_pay_down_house  perc_diff\n",
-       "0               1                 1489.533                  976.749     52.499\n",
-       "1               2                 1193.400                 1381.704    -13.628\n",
-       "2               3                 4690.212                 2225.656    110.734\n",
-       "3               4                 2853.618                 1818.916     56.886\n",
-       "4               5                 3023.094                 2732.078     10.652\n",
-       "..            ...                      ...                      ...        ...\n",
-       "995           996                 4162.369                 1960.712    112.289\n",
-       "996           997                 1859.200                 1548.750     20.045\n",
-       "997           998                 1565.336                 1212.288     29.122\n",
-       "998           999                 4545.602                 3173.039     43.257\n",
-       "999          1000                 2019.371                 2026.182     -0.336\n",
+       "     _row_num value_if_renew_mortgage value_if_pay_down_house perc_diff\n",
+       "0           1              1616074.90              1149654.06     40.57\n",
+       "1           2              3314524.48              1869402.19     77.30\n",
+       "2           3              1562852.13              1287059.51     21.42\n",
+       "3           4              1264256.73              1376323.12     -8.14\n",
+       "4           5              1124101.47              1165339.87     -3.53\n",
+       "..        ...                     ...                     ...       ...\n",
+       "995       996              7435961.95              3933594.40     89.03\n",
+       "996       997              3178854.04              1918185.56     65.72\n",
+       "997       998              7807766.75              3979523.78     96.19\n",
+       "998       999              4477822.29              2633370.76     70.04\n",
+       "999      1000              4157366.54              3140112.24     32.39\n",
        "\n",
        "[1000 rows x 4 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = await sqrl.dataset(\"simulations\")\n",
+    "df = (await sqrl.dataset(\"simulations\")).df.to_pandas()\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_row_num                    uint32\n",
+       "value_if_renew_mortgage    float64\n",
+       "value_if_pay_down_house    float64\n",
+       "perc_diff                  float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = df.apply(pd.to_numeric)\n",
+    "df.dtypes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_row_num</th>\n",
+       "      <th>value_if_renew_mortgage</th>\n",
+       "      <th>value_if_pay_down_house</th>\n",
+       "      <th>perc_diff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1616074.90</td>\n",
+       "      <td>1149654.06</td>\n",
+       "      <td>40.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3314524.48</td>\n",
+       "      <td>1869402.19</td>\n",
+       "      <td>77.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1562852.13</td>\n",
+       "      <td>1287059.51</td>\n",
+       "      <td>21.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1264256.73</td>\n",
+       "      <td>1376323.12</td>\n",
+       "      <td>-8.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1124101.47</td>\n",
+       "      <td>1165339.87</td>\n",
+       "      <td>-3.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>996</td>\n",
+       "      <td>7435961.95</td>\n",
+       "      <td>3933594.40</td>\n",
+       "      <td>89.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>997</td>\n",
+       "      <td>3178854.04</td>\n",
+       "      <td>1918185.56</td>\n",
+       "      <td>65.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>998</td>\n",
+       "      <td>7807766.75</td>\n",
+       "      <td>3979523.78</td>\n",
+       "      <td>96.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>999</td>\n",
+       "      <td>4477822.29</td>\n",
+       "      <td>2633370.76</td>\n",
+       "      <td>70.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>4157366.54</td>\n",
+       "      <td>3140112.24</td>\n",
+       "      <td>32.39</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     _row_num  value_if_renew_mortgage  value_if_pay_down_house  perc_diff\n",
+       "0           1               1616074.90               1149654.06      40.57\n",
+       "1           2               3314524.48               1869402.19      77.30\n",
+       "2           3               1562852.13               1287059.51      21.42\n",
+       "3           4               1264256.73               1376323.12      -8.14\n",
+       "4           5               1124101.47               1165339.87      -3.53\n",
+       "..        ...                      ...                      ...        ...\n",
+       "995       996               7435961.95               3933594.40      89.03\n",
+       "996       997               3178854.04               1918185.56      65.72\n",
+       "997       998               7807766.75               3979523.78      96.19\n",
+       "998       999               4477822.29               2633370.76      70.04\n",
+       "999      1000               4157366.54               3140112.24      32.39\n",
+       "\n",
+       "[1000 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "df"
    ]
   },
